Add and configure jpackage.